[gd_scene load_steps=5 format=2]

[ext_resource path="res://world/OneWayPlatform.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/FallingOneWayPlatform.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/platform_fall.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 10 )

[node name="FallingOneWayPlatform" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." index="2"]
position = Vector2( 0, -40 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="." index="3"]
one_shot = true

[node name="ResetTimer" type="Timer" parent="." index="4"]
one_shot = true

[node name="Tween" type="Tween" parent="." index="5"]

[node name="Audio" type="AudioStreamPlayer2D" parent="." index="6"]
stream = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
